--- a/WpfApp1/Views/ShellView.xaml
+++ b/WpfApp1/Views/ShellView.xaml
@@ -1,24 +1,22 @@
-﻿<controls:MetroWindow x:Class="WpfApp1.Views.ShellView"
+﻿<mah:MetroWindow x:Class="WpfApp1.Views.ShellView"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                      xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      xmlns:controls="clr-namespace:WpfApp1.Controls"
                       xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-                      xmlns:views="clr-namespace:WpfApp1.Views"
                       GlowBrush="{DynamicResource AccentColorBrush}"
                       Title="{Binding WindowCaption}"
                       WindowStartupLocation="CenterScreen">
-    <controls:MetroWindow.Resources>
-        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+    <mah:MetroWindow.Resources>
         <Style x:Key="HeaderLabel" TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}">
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="TextAlignment" Value="Center"/>
             <Setter Property="FontSize" Value="29px"/>
         </Style>
-    </controls:MetroWindow.Resources>
+    </mah:MetroWindow.Resources>
 
-    <Grid>
-        <!--Contenidos-->
+    <controls:BusyIndicator IsBusy="False">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -34,14 +32,5 @@
             <TextBlock Grid.Column="2" Grid.Row="0" Style="{StaticResource HeaderLabel}">Destino</TextBlock>
             <ContentControl Grid.Row="1" Grid.Column="2" Name="DestinyExcelViewerVm" Margin="10" />
         </Grid>
-
-        <!--Busy Indicator-->
-        <Border Background="#806F6F6F" Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}" >
-            <StackPanel VerticalAlignment="Center">
-                <controls:ProgressRing x:Name="PRing" />
-                <xctk:TrimmedTextBlock Text="Please Wait" HorizontalAlignment="Center" FontSize="20" />
-            </StackPanel>
-        </Border>
-    </Grid>
-
-</controls:MetroWindow>
+    </controls:BusyIndicator>
+</mah:MetroWindow>
