--- a/WpfApp1/Dictionaries/ControlsDictionary.xaml
+++ b/WpfApp1/Dictionaries/ControlsDictionary.xaml
@@ -1,9 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:WpfApp1.Dictionaries"
-                    xmlns:controls="clr-namespace:WpfApp1.Controls"
                     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-                    xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit">
+                    xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+                    xmlns:controls="clr-namespace:ExcelCombinator.Controls">
     <!--Converters-->
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
 
