--- a/WpfApp1/Views/ExcelViewerView.xaml
+++ b/WpfApp1/Views/ExcelViewerView.xaml
@@ -1,54 +1,30 @@
-﻿<mah:MetroContentControl x:Class="WpfApp1.Views.ExcelViewerView"
+﻿<mah:MetroContentControl x:Class="ExcelCombinator.Views.ExcelViewerView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfApp1.Views"
-             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                         xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <mah:MetroContentControl.Resources>
-        <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
-            <Setter Property="Margin" Value="5" />
-        </Style>
-        <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}">
-            <Setter Property="Margin" Value="5" />
-            <Setter Property="VerticalAlignment" Value="Center" />
-        </Style>
-        <Style TargetType="xctk:IconButton" BasedOn="{StaticResource {x:Type xctk:IconButton}}">
-            <Setter Property="MinHeight" Value="20" />
-            <Setter Property="VerticalAlignment" Value="Center" />
-        </Style>
-        <Style TargetType="ComboBox" BasedOn="{StaticResource {x:Type ComboBox}}">
-            <Setter Property="Margin" Value="5" />
-        </Style>
-    </mah:MetroContentControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0" Text="Fichero Excel" />
-        <TextBox Grid.Column="1" Grid.Row="0" mah:TextBoxHelper.Watermark="Fichero Excel" Text="{Binding FileLocation}" IsEnabled="False" />
-        <Grid Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <xctk:IconButton x:Name="OpenFile" Grid.Column="0" Content="Open File" IconLocation="Left" />
-            <xctk:IconButton Name="ParseFile" Grid.Column="1" Content="Parse File" IconLocation="Left" />
-        </Grid>
-        <TextBlock Grid.Column="0" Grid.Row="2" Text="Hoja" HorizontalAlignment="Right" />
-        <ComboBox Grid.Column="1" Grid.Row="2" ItemsSource="{Binding Sheets}" />
-        <DataGrid Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" AutoGenerateColumns="True" IsReadOnly="True"  />
+        <TextBlock Grid.Column="0" Grid.Row="0" Text="Fichero Excel" Style="{StaticResource LabelStyle}" />
+        <TextBox Grid.Column="1" Grid.Row="0" mah:TextBoxHelper.Watermark="Fichero Excel" Text="{Binding FileLocation}" Margin="5" />
+        <Button x:Name="OpenFile" Grid.Column="2" Grid.Row="0" Content="Buscar" />
+        <TextBlock Grid.Column="0" Grid.Row="1" Text="Hoja" HorizontalAlignment="Right" Style="{StaticResource LabelStyle}" />
+        <ComboBox Grid.Column="1" Grid.Row="1" ItemsSource="{Binding Sheets}" Grid.ColumnSpan="2" IsEnabled="{Binding IsParsed}" SelectedValue="{Binding SelectedSheet}"/>
+        <DataGrid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" ItemsSource="{Binding PreviewData}" AutoGenerateColumns="True" IsReadOnly="True" Visibility="{Binding IsParsed, Converter={StaticResource BooleanToVisibilityConverter}}" />
     </Grid>
 </mah:MetroContentControl>
 
