--- a/WpfApp1/Views/ShellView.xaml
+++ b/WpfApp1/Views/ShellView.xaml
@@ -1,36 +1,34 @@
-﻿<mah:MetroWindow x:Class="WpfApp1.Views.ShellView"
+﻿<mah:MetroWindow x:Class="ExcelCombinator.Views.ShellView"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-                      xmlns:controls="clr-namespace:WpfApp1.Controls"
-                      xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-                      GlowBrush="{DynamicResource AccentColorBrush}"
+                 xmlns:controls="clr-namespace:ExcelCombinator.Controls"
+                 xmlns:cal="http://www.caliburnproject.org"
+                 GlowBrush="{DynamicResource AccentColorBrush}"
                       Title="{Binding WindowCaption}"
                       WindowStartupLocation="CenterScreen">
-    <mah:MetroWindow.Resources>
-        <Style x:Key="HeaderLabel" TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}">
-            <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="TextAlignment" Value="Center"/>
-            <Setter Property="FontSize" Value="29px"/>
-        </Style>
-    </mah:MetroWindow.Resources>
-
-    <controls:BusyIndicator IsBusy="False">
+    <controls:BusyIndicator IsBusy="{Binding IsBusy}" BusyText="{Binding BusyText}">
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="10px"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition />
+                <ColumnDefinition Width="400" />
             </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <TextBlock Grid.Column="0" Grid.Row="0" Style="{StaticResource HeaderLabel}">Origen</TextBlock>
-            <ContentControl Grid.Row="1" Grid.Column="0" Name="OriginExcelViewerVm" Margin="10" />
-            <TextBlock Grid.Column="2" Grid.Row="0" Style="{StaticResource HeaderLabel}">Destino</TextBlock>
-            <ContentControl Grid.Row="1" Grid.Column="2" Name="DestinyExcelViewerVm" Margin="10" />
+            <mah:MetroAnimatedTabControl mah:TabControlHelper.Underlined="TabPanel" >
+                <mah:MetroTabItem Header="Origen">
+                    <ContentControl Margin="10" cal:View.Model="{Binding OriginExcelViewerVm}" />
+                </mah:MetroTabItem>
+                <mah:MetroTabItem Header="Destino">
+                    <ContentControl Margin="10" cal:View.Model="{Binding DestinyExcelViewerVm}" />
+                </mah:MetroTabItem>
+            </mah:MetroAnimatedTabControl>
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+            </Grid>
         </Grid>
     </controls:BusyIndicator>
 </mah:MetroWindow>
