--- a/WpfApp1/Dictionaries/DefaultStyles.xaml
+++ b/WpfApp1/Dictionaries/DefaultStyles.xaml
@@ -1,7 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:ExcelCombinator.Dictionaries"
-                    xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
         <Setter Property="Margin" Value="5" />
@@ -13,7 +11,7 @@
     </Style>
 
     <Style x:Key="LabelStyle" TargetType="TextBlock" BasedOn="{StaticResource DefaultTextblockStyle}">
-        <Setter Property="Foreground" Value="{StaticResource AccentColorBrush}" />
+        <Setter Property="Foreground" Value="{DynamicResource AccentColorBrush}" />
     </Style>
 
     <Style x:Key="HeaderStyle" TargetType="TextBlock" BasedOn="{StaticResource LabelStyle}">
@@ -22,12 +20,7 @@
         <Setter Property="FontSize" Value="20px"/>
     </Style>
 
-    <Style TargetType="xctk:IconButton" BasedOn="{StaticResource {x:Type xctk:IconButton}}">
-        <Setter Property="MinHeight" Value="20" />
-        <Setter Property="VerticalAlignment" Value="Center" />
-    </Style>
-
-    <Style TargetType="ComboBox" BasedOn="{StaticResource {x:Type ComboBox}}">
+    <Style TargetType="ComboBox" BasedOn="{StaticResource MetroComboBox}">
         <Setter Property="Margin" Value="5" />
     </Style>
 
@@ -38,4 +31,17 @@
     <Style TargetType="Button" BasedOn="{StaticResource MetroAccentButton}">
         <Setter Property="Margin" Value="5" />
     </Style>
+
+    <Style x:Key="TitleStyle" TargetType="Label">
+        <Setter Property="FontWeight" Value="Bold" />
+        <Setter Property="FontSize" Value="22" />
+        <Setter Property="Foreground" Value="{DynamicResource AccentColorBrush}" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="Margin" Value="10, 0, 0, 0" />
+    </Style>
+
+    <Style TargetType="Separator" BasedOn="{StaticResource {x:Type Separator}}">
+        <Setter Property="Background" Value="{DynamicResource AccentColorBrush3}" />
+    </Style>
+
 </ResourceDictionary>
