--- a/WpfApp1/Views/ExcelViewerView.xaml
+++ b/WpfApp1/Views/ExcelViewerView.xaml
@@ -3,8 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                         xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -19,7 +18,7 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0" Text="Fichero Excel" Style="{StaticResource LabelStyle}" />
+        <TextBlock Grid.Column="0" Grid.Row="0" Text="Fichero Excel" Style="{DynamicResource LabelStyle}" />
         <TextBox Grid.Column="1" Grid.Row="0" mah:TextBoxHelper.Watermark="Fichero Excel" Text="{Binding FileLocation}" Margin="5" />
         <Button x:Name="OpenFile" Grid.Column="2" Grid.Row="0" Content="Buscar" />
         <TextBlock Grid.Column="0" Grid.Row="1" Text="Hoja" HorizontalAlignment="Right" Style="{StaticResource LabelStyle}" />
