--- a/WpfApp1/Dictionaries/ControlsDictionary.xaml
+++ b/WpfApp1/Dictionaries/ControlsDictionary.xaml
@@ -4,8 +4,8 @@
                     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
                     xmlns:controls="clr-namespace:ExcelCombinator.Controls"
                     xmlns:cal="http://www.caliburnproject.org"
-                    xmlns:interfaces="clr-namespace:ExcelCombinator.Models.Interfaces"
-                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
+                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+                    xmlns:interfaces="clr-namespace:ExcelCombinator.Interfaces">
     <!--Converters-->
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
 
@@ -55,7 +55,7 @@
                         <TextBlock Grid.Column="1" Text="{Binding Origin}" FontWeight="Bold" Margin="5, 0" />
                         <TextBlock Grid.Column="2" Text="Destino: " Foreground="{DynamicResource AccentColorBrush}"/>
                         <TextBlock Grid.Column="3" Text="{Binding Destiny}" FontWeight="Bold" Margin="5, 0" />
-                        <Button Grid.Column="4" Style="{DynamicResource MahApps.Metro.Styles.MetroCircleButtonStyle}" BorderThickness="0" Margin="10, 0" Focusable="False">
+                        <Button Grid.Column="4" Style="{DynamicResource MahApps.Metro.Styles.MetroCircleButtonStyle}" BorderThickness="0" Margin="10, 0" Focusable="False" cal:Message.Attach="Eliminar">
                             <iconPacks:PackIconMaterial Kind="Delete" Height="14" Width="10" Foreground="{DynamicResource AccentColorBrush}" />
                         </Button>
                     </Grid>
