--- a/WpfApp1/Views/ShellView.xaml
+++ b/WpfApp1/Views/ShellView.xaml
@@ -24,6 +24,9 @@
                 <MenuItem Header="Tema"
                       ItemContainerStyle="{StaticResource AccentColorMenuItemStyle}"
                       ItemsSource="{Binding AccentColors, Mode=OneWay}" />
+                <MenuItem Header="Utilidades">
+                    <MenuItem Header="_Arreglar CSV" cal:Message.Attach="FixCsv"/>
+                </MenuItem>
             </Menu>
             <mah:MetroAnimatedTabControl Grid.Row="1" Grid.Column="0" mah:TabControlHelper.Underlined="TabPanel" >
                 <mah:MetroTabItem Header="Origen">
