--- a/ExcelCombinator/Views/ExcelViewerView.xaml
+++ b/ExcelCombinator/Views/ExcelViewerView.xaml
@@ -11,6 +11,7 @@
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -20,10 +21,11 @@
 
         <TextBlock Grid.Column="0" Grid.Row="0" Text="Fichero Excel" Style="{DynamicResource LabelStyle}" />
         <TextBox Grid.Column="1" Grid.Row="0" mah:TextBoxHelper.Watermark="Fichero Excel" Text="{Binding FileLocation}" IsReadOnly="True" Margin="5" />
-        <Button x:Name="OpenFile" Grid.Column="2" Grid.Row="0" Content="Buscar" />
+        <Button x:Name="SearchFile" Grid.Column="2" Grid.Row="0" Content="Buscar" />
+        <Button x:Name="OpenFile" Grid.Column="3" Grid.Row="0" Content="Abrir" />
         <TextBlock Grid.Column="0" Grid.Row="1" Text="Hoja" HorizontalAlignment="Right" Style="{StaticResource LabelStyle}" />
-        <ComboBox Grid.Column="1" Grid.Row="1" ItemsSource="{Binding Sheets}" Grid.ColumnSpan="2" IsEnabled="{Binding IsParsed}" SelectedValue="{Binding SelectedSheet}"/>
-        <DataGrid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" ItemsSource="{Binding PreviewData}" AutoGenerateColumns="True" IsReadOnly="True" Visibility="{Binding IsParsed, Converter={StaticResource BooleanToVisibilityConverter}}" />
+        <ComboBox Grid.Column="1" Grid.Row="1" ItemsSource="{Binding Sheets}" Grid.ColumnSpan="3" IsEnabled="{Binding IsParsed}" SelectedValue="{Binding SelectedSheet}"/>
+        <DataGrid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4" ItemsSource="{Binding PreviewData}" AutoGenerateColumns="True" IsReadOnly="True" Visibility="{Binding IsParsed, Converter={StaticResource BooleanToVisibilityConverter}}" />
     </Grid>
 </mah:MetroContentControl>
 
