--- a/ExcelCombinator/Dictionaries/DefaultStyles.xaml
+++ b/ExcelCombinator/Dictionaries/DefaultStyles.xaml
@@ -1,4 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
@@ -43,5 +44,4 @@
     <Style TargetType="Separator" BasedOn="{StaticResource {x:Type Separator}}">
         <Setter Property="Background" Value="{DynamicResource AccentColorBrush3}" />
     </Style>
-
 </ResourceDictionary>
