--- a/ExcelCombinator/Views/ShellView.xaml
+++ b/ExcelCombinator/Views/ShellView.xaml
@@ -10,6 +10,8 @@
                  dialog:DialogParticipation.Register="{Binding}"
                       Title="{Binding WindowCaption}"
                       WindowStartupLocation="CenterScreen">
+    <mah:MetroWindow.Resources>
+    </mah:MetroWindow.Resources>
     <controls:BusyIndicator IsBusy="{Binding IsBusy}" BusyText="{Binding BusyText}">
         <Grid>
             <Grid.RowDefinitions>
@@ -54,11 +56,11 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="auto" />
-                        <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
                     <Label Grid.Column="0" Content="Campos de enlace" Style="{DynamicResource TitleStyle}"/>
-                    <TextBlock Grid.Column="1" Style="{DynamicResource LabelStyle}" Text="Normalizar" />
-                    <mah:ToggleSwitchButton Grid.Column="2" IsChecked="{Binding NormalizeKeys}" />
+                    <mah:DropDownButton  Grid.Column="1" Content="Opciones" BorderThickness="0" Style="{DynamicResource ContextMenuStyle}" ItemsSource="{Binding ContextOptions}"></mah:DropDownButton>
+                    <!--<TextBlock Grid.Column="1" Style="{DynamicResource LabelStyle}" Text="Normalizar" />
+                    <mah:ToggleSwitchButton Grid.Column="2" IsChecked="{Binding NormalizeKeys}" />-->
                 </Grid>
                 <Separator Grid.Row="4" />
                 <ListBox Grid.Row="5" ItemsSource="{Binding KeyRelations}" Style="{DynamicResource RelationListbox}" />
