Changed dropdown button to menu

--- a/ExcelCombinator/Dictionaries/DefaultStyles.xaml
+++ b/ExcelCombinator/Dictionaries/DefaultStyles.xaml
@@ -44,4 +44,8 @@
     <Style TargetType="Separator" BasedOn="{StaticResource {x:Type Separator}}">
         <Setter Property="Background" Value="{DynamicResource AccentColorBrush3}" />
     </Style>
+
+    <Style TargetType="Menu" BasedOn="{StaticResource {x:Type Menu}}">
+        <Setter Property="Foreground" Value="{DynamicResource AccentColorBrush}" />
+    </Style>
 </ResourceDictionary>
