--- a/ExcelCombinator/Views/ShellView.xaml
+++ b/ExcelCombinator/Views/ShellView.xaml
@@ -10,8 +10,6 @@
                  dialog:DialogParticipation.Register="{Binding}"
                       Title="{Binding WindowCaption}"
                       WindowStartupLocation="CenterScreen">
-    <mah:MetroWindow.Resources>
-    </mah:MetroWindow.Resources>
     <controls:BusyIndicator IsBusy="{Binding IsBusy}" BusyText="{Binding BusyText}">
         <Grid>
             <Grid.RowDefinitions>
@@ -58,9 +56,11 @@
                         <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
                     <Label Grid.Column="0" Content="Campos de enlace" Style="{DynamicResource TitleStyle}"/>
-                    <mah:DropDownButton  Grid.Column="1" Content="Opciones" BorderThickness="0" Style="{DynamicResource ContextMenuStyle}" ItemsSource="{Binding ContextOptions}"></mah:DropDownButton>
-                    <!--<TextBlock Grid.Column="1" Style="{DynamicResource LabelStyle}" Text="Normalizar" />
-                    <mah:ToggleSwitchButton Grid.Column="2" IsChecked="{Binding NormalizeKeys}" />-->
+                    <Menu Grid.Column="1" VerticalAlignment="Bottom" BorderThickness="0" FlowDirection="RightToLeft">
+                        <MenuItem Header="opciones" DataContext="{Binding OriginParserOptions}">
+                            <MenuItem Header="Normalizar valores de campos" IsCheckable="True" IsChecked="{Binding NormalizeFields}" />
+                        </MenuItem>
+                    </Menu>
                 </Grid>
                 <Separator Grid.Row="4" />
                 <ListBox Grid.Row="5" ItemsSource="{Binding KeyRelations}" Style="{DynamicResource RelationListbox}" />
